# MUNILSoftware

./: Makefile.am  README  TODO  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac
MSVC/: Makefile.am  wxMUN.sln
cmake/: FindLibXml++.cmake
data/: Makefile.am  Makefile.in  countries_old.xml  install.nsi.in  wxmun.desktop
data/flags/: Makefile.am
data/installer-pixmaps/: Makefile.am
doc/: Makefile.am
doc/manual/: Makefile.am  manual.tex
images/: Makefile.am  Makefile.in  wxMUNicon.icns
include/: Makefile.am  app.h  clear_png.h  committee.h  configmanager.h  confirmtopicswapdialog.h  countriespresentdialog.h  country.h  defs.h  editcommitteedialog.h  gui.h  main.h  newcommitteedialog.h  prep.h  rollcallvote.h  version.h.SH  votingpanel.h  wxmunaboutdialog.h  wxmunframe.h  yielddialog.h
m4/: Makefile.am
src/: Makefile.am  Makefile.in  committee.cpp  configmanager.cpp  confirmtopicswapdialog.cpp  countriespresentdialog.cpp  country.cpp  editcommitteedialog.cpp  gui.cpp  gui.h  main.cpp  newcommitteedialog.cpp  resources.rc  rollcallvote.cpp  session.cpp  wxmun.fbp  wxmunaboutdialog.cpp  wxmunframe.cpp  yielddialog.cpp
src/resources/: Makefile.am  RIMUN.xml  wxMUN.icns
src/resources/16x16/: Makefile.am
src/resources/32x32/: Makefile.am
src/resources/flags/: Makefile.am
trunk/: CMakeLists.txt  COPYING  MacInfo.plist.in  Makefile.am  Makefile.in  README  TODO  aclocal.m4  autogen.sh  configure  configure.ac
trunk/MSVC/: Makefile.in  wxMUN.vcproj
trunk/data/: Makefile.am  beertjes.xml  correct_committee.xml  install.nsi.in  makezip.sh.in  sc.xml  sc_hsp2.xml
trunk/data/flags/: Makefile.am  Makefile.in
trunk/doc/: Makefile.am
trunk/doc/manual/: manual.tex
trunk/images/: Makefile.am  Makefile.in
trunk/include/: Makefile.am  Makefile.in  clear_png.h  committee.h  confirmtopicswapdialog.h  countriespresentdialog.h  defs.h  editcommitteedialog.h  gui.h  main.h  newcommitteedialog.h  noname.h  prep.h  rollcallvote.h  session.h  unl_logo.h  votingpanel.h  wxmunaboutdialog.h  wxmunframe.h
trunk/m4/: Makefile  Makefile.am  Makefile.in  ax_lib_xerces.m4
trunk/po/: Makefile.am
trunk/src/: Makefile.am  committee.cpp  configmanager.cpp  confirmtopicswapdialog.cpp  countriespresentdialog.cpp  country.cpp  editcommitteedialog.cpp  gui.cpp  gui.h  gui.xrc  main.cpp  newcommitteedialog.cpp  noname.cpp  rollcallvote.cpp  session.cpp  wxmun.fbp  wxmunaboutdialog.cpp  wxmunaboutdialog.h  wxmunframe.cpp  yielddialog.cpp
trunk/src/resources/: Makefile.am  correct_sc.xml  kabouter.xml  version.rc.in  wxmun.rc
trunk/src/resources/icons/: Makefile.am  wxMUN.xpm
