## Process this file with automake to produce Makefile.in

wxMUN_includedir = $(pkgincludedir)

wxMUN_include_DATA = clear_png.h \
			committee.h \
			configmanager.h \
			confirmtopicswapdialog.h \
			countriespresentdialog.h \
			country.h \
			defs.h \
			editcommitteedialog.h \
			gui.h \
			main.h \
			newcommitteedialog.h \
			noname.h \
			prep.h \
			rollcallvote.h\
			session.h \
			votingpanel.h \
			wxmunframe.h\
			wxmunaboutdialog.h \
			yielddialog.h

EXTRA_DIST = $(wxMUN_include_DATA) 
