INCLUDES = -I.. -I../include

bin_PROGRAMS = wxmun
wxmun_SOURCES = committee.cpp \
		configmanager.cpp \
		confirmtopicswapdialog.cpp \
		countriespresentdialog.cpp \
		country.cpp \
		editcommitteedialog.cpp \
		gui.cpp \
		main.cpp \
		newcommitteedialog.cpp \
		noname.cpp \
		rollcallvote.cpp\
		session.cpp \
		wxmunframe.cpp\
		wxmunaboutdialog.cpp\
		yielddialog.cpp

wxmun_LDADD = @LIBS@
wxmun_CXXFLAGS = @CXXFLAGS@ 
